--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "nunomaduro/larastan": "^2.9",
+        "phpstan/phpstan": "^1.11",
+        "phpunit/phpunit": "^11.0.1",
+        "squizlabs/php_codesniffer": "^3.10"
     },
     "autoload": {
         "psr-4": {
@@ -46,7 +49,10 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
-        ]
+        ],
+        "cs": "phpcs --standard=PSR12 app/",
+        "cbf": "phpcbf --standard=PSR12 app/",
+        "phpstan": "phpstan analyse"
     },
     "extra": {
         "laravel": {
