--- a/docker/8.2-prod/nginx.conf
+++ b/docker/8.2-prod/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     root /var/www/html/public;
-    server_name beerandcode-academy.com.br;
+    server_name phpcontributing.com;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
