feat: add pre-push hook for PHP checks and update workflow job name

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,8 +5,8 @@ on:
     branches: [ "master" ]
  
 jobs:
-  phpstan:
-    name: phpstan
+  static-analyse:
+    name: Static Analysis
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
